# libcne-ve

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: clippy.yml  fmt.yml  release.yml  test.yml
example/print_to_screen/: Cargo.toml
example/print_to_screen/src/: main.rs
src/: lib.rs
src/cne/: citizenship.rs  elector.rs  mod.rs  url.rs
src/request/: mod.rs  request.rs  request_error.rs
src/utils/: mod.rs
tests/: citizenship.rs  elector.rs  request.rs
