[package]
name = "libcne"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

[lib]
name = "libcne"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
scraper = "0.12.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.41"
