[package]
name = "libcne-ve"
version = "0.1.0"
authors = [
  "Angel Afonso <angelafonso60@gmail.com>",
  "Esteban Borai <estebanborai@gmail.com>"
]

edition = "2018"
license = "GNU"
description = "Fetches data from a public endpoint in the CNE website and deserializes its contents."
readme = "README.md"
repository = "https://github.com/rust-lang-ve/libcne-ve"
categories = ["api", "client"]

[lib]
name = "libcne_ve"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
scraper = "0.12.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.41"
regex = "1.3.9"

[dev-dependencies]
tokio-test = "0.2.1"
